== Groups by itthinx - changelog.txt ==

= 2.7.1 =
* Improved UIE rendering for group choices and made it more resilient to load dependencies, Javascript execution order and pages where it is used.
* Fixed UIE rendering for group choices with the block editor which would unduly cap the list visually providing an awkward UX.

= 2.7.0 =
* WordPress 5.2 compatible.
* Fixed translation loading to apply the user's locale when set.
* Updated the German translation.
* Updated the Spanish translation.
* Updated the French translation (yet incomplete).
* Added the Indonesian translation.
* Updated the Swedish translation (yet incomplete).
* Updated the Brazilian Portuguese translation (yet incomplete).
* Updated the Dutch translation (yet incomplete).
* Updated the Lithuanian translatoion (yet incomplete).

= 2.6.1 =
* Improved the useability of group and capability selection dropdowns.
* Fixed clash between group filter and group action on Users admin screen.
* Added an option to filter the Users screen to match users who belong to all chosen groups.
* German translation updated.
* Spanish translation updated.
* French translation updated (yet incomplete).
* Updated the minimum required PHP version.

= 2.6.0 =
* Tested for WordPress 5.1.
* Added an option to filter by posts restricted by any group.
* Added an option to filter by posts restricted by no group.
* Removed an option to filter by only unrestricted posts which didn't work.
* Improved groups column header fitting on post admin screens.
* Fixed a notice when a user has no groups assigned.

= 2.5.0 =
* Tested for WordPress 5.0.

= 2.4.0 =
* Improved performance when filtering the users list by groups to avoid issues with large user bases.
* Tested with the latest WordPress 4.9.
* Updated the minimum required WordPress version to 4.6.
* Fixed a missing Javascript resource when selecting an image in the customizer.

= 2.3.1 =